--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<app-ui>-->
+<app-ui>
 
   <app-header class ='tr_header'> </app-header>
 
@@ -7,6 +7,5 @@
   <app-footer class ='tr_footer'> </app-footer>
 
   <router-outlet class ="tr_router"> </router-outlet>
-
-<!--</app-ui>-->
+</app-ui>
 
