--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -21,7 +21,7 @@
    <div class="page">
      <div class="contents">
        <ng-content select=".tr_router"> </ng-content>
-       Content (pas la joie)
+      aaaaah
 
      </div>
 
