--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<app-ui>-->
+<app-ui>
 
   <app-header class ='tr_header'> </app-header>
 
@@ -8,5 +8,5 @@
 
   <router-outlet class ="tr_router"> </router-outlet>
 
-<!--</app-ui>-->
+</app-ui>
 
