--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~bootstrap/scss/bootstrap';
+
+
+
+@import "./stylings/fonts";
+
+@import "./stylings/layout";
+
+@import "./stylings/theme";
+
+
+
+@import '~bootstrap/scss/bootstrap';
