start works nav

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,1 +1,16 @@
-<p>nav works!</p>
+<!-- La nav correspond à la partie Tchatroom. Il s'agit de la sélection des salles de tchats -->
+
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a
+    routerLink='/Tchatroom'
+    routerLinkActive="active" class="nav-link"
+    >Orders</a>
+  </li>
+  <li class="nav-item">
+    <a
+    class="nav-link"
+    >Clients</a>
+  </li>
+</ul>
+
