--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 
   <app-nav class ='tr_nav'> </app-nav>
 
-  <app-footer class ='tr_footer'> </app-footer>
+  <app-footer class ='tr_footer'>
+
+  </app-footer>
 
   <router-outlet class ="tr_router"> </router-outlet>
 </app-ui>
