add nav : tchatroom, module components, routing

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -5,12 +5,14 @@
     <a
     routerLink='/Tchatroom'
     routerLinkActive="active" class="nav-link"
-    >Orders</a>
+    >ici la room 1</a>
   </li>
   <li class="nav-item">
     <a
     class="nav-link"
-    >Clients</a>
+    routerLink='/Tchatroom'
+    routerLinkActive="active" class="nav-link"
+    >Ici la room 3</a>
   </li>
 </ul>
 
