--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -12,7 +12,7 @@
    <aside>
      <div class="scroller">
        <!--Nav-->
-       <ng-content select ='tr_button'> </ng-content>
+       <ng-content select ='.tr_button'> </ng-content>
 
        <ng-content select ='.tr_nav'> </ng-content>
      </div>
@@ -20,7 +20,7 @@
    <div class="page">
      <div class="contents">
        <ng-content select=".tr_router"> </ng-content>
-       Content (pas la joie)
+      aaaaah
 
      </div>
 
