--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -14,5 +14,6 @@
     routerLinkActive="active" class="nav-link"
     >Ici la room 3</a>
   </li>
+  <button class="btn btn-primary"> Ajouter </button>
 </ul>
 
