--- a/src/app/tchatrooms/page-add-tchatroom/page-add-tchatroom.component.html
+++ b/src/app/tchatrooms/page-add-tchatroom/page-add-tchatroom.component.html
@@ -1,1 +1,1 @@
-<app-form-tchatrooms [tchat] ='chat' (enter)="Addtchat(chat)"> </app-form-tchatrooms>
+<app-form-tchatrooms [tchat] ='chat' (enter)="Addtchat(chat)"> </app-form-tchatrooms> <!-- ($tchat ?)-->
