--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,19 +1,3 @@
 <!-- La nav correspond à la partie Tchatroom. Il s'agit de la sélection des salles de tchats -->
 
-<ul class="nav flex-column">
-  <li class="nav-item">
-    <a
-    routerLink='/Tchatroom'
-    routerLinkActive="active" class="nav-link"
-    >ici la room 1</a>
-  </li>
-  <li class="nav-item">
-    <a
-    class="nav-link"
-    routerLink='/Tchatroom'
-    routerLinkActive="active" class="nav-link"
-    >Ici la room 3</a>
-  </li>
-  <button class="btn btn-primary"> Ajouter </button>
-</ul>
-
+<app-page-list-tcharooms> </app-page-list-tcharooms>
