--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,12 @@
 
   <app-nav class ='tr_nav'> </app-nav>
 
+  <app-page-list-messages></app-page-list-messages>
+
   <app-footer class ='tr_footer'>
 
   </app-footer>
 
-<<<<<<< HEAD
   <router-outlet class ="tr_router"> </router-outlet>
-=======
->>>>>>> 791133ce2b98ea17494653eae286ebbd9d5c1130
 </app-ui>
 
