almost ended read

--- a/src/app/tchatrooms/page-list-tchatroom/page-list-tchatroom.component.html
+++ b/src/app/tchatrooms/page-list-tchatroom/page-list-tchatroom.component.html
@@ -2,6 +2,7 @@
 <div *ngIf="Rooms$ | async as collection">
 <tr *ngFor="let item of collection" >
   <th scope="row">1</th>
+  <div class ="hidden"> {{item.id}} </div>
   <td>{{item.name |uppercase }}</td>
   <!--<td>{{item.CreationDate}}</td>-->
 
