afficher les rooms et les message

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,18 +1,4 @@
 <!-- La nav correspond à la partie Tchatroom. Il s'agit de la sélection des salles de tchats -->
 
-<ul class="nav flex-column">
-  <li class="nav-item">
-    <a
-    routerLink='/Tchatroom'
-    routerLinkActive="active" class="nav-link"
-    >ici la room 1</a>
-  </li>
-  <li class="nav-item">
-    <a
-    class="nav-link"
-    routerLink='/Tchatroom'
-    routerLinkActive="active" class="nav-link"
-    >Ici la room 3</a>
-  </li>
-</ul>
+<app-page-list-tchatroom ></app-page-list-tchatroom>
 
