--- a/src/app/tchatrooms/page-list-tchatroom/page-list-tchatroom.component.html
+++ b/src/app/tchatrooms/page-list-tchatroom/page-list-tchatroom.component.html
@@ -1,1 +1,7 @@
-<p>page-list-tchatroom works!</p>
+
+
+<div class="list-group" *ngFor='let item of collection$ |async as collection' >
+
+  <button (click)='onRoom(item)' type="button" class="list-group-item list-group-item-action">{{item.name | uppercase }} </button>
+
+</div>
