--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
   <app-nav class ='tr_nav'> </app-nav>
 
-  <app-page-list-messages></app-page-list-messages>
+  <app-page-list-messages class="tr_router"></app-page-list-messages>
   <app-footer class ='tr_footer'>
 
   </app-footer>
