--- a/src/app/tchatrooms/page-add-tchatroom/form-tchatrooms/form-tchatrooms.component.html
+++ b/src/app/tchatrooms/page-add-tchatroom/form-tchatrooms/form-tchatrooms.component.html
@@ -1,1 +1,7 @@
-<p>form-tchatrooms works!</p>
+
+  <div class="form-group">
+    <label for="name"></label>
+
+    <input formControlName='name' type="text" class="form-control" id="name" placeholder="Nom de la room">
+
+  </div>
